test for new api point
